# libvpx

./: .gitlab-ci.yml  LICENSE.meson.md  README.meson.md  meson.build  meson_options.txt  meson_parse_options.py
examples/: meson.build  samples.dox.in
meson/: arm_neon.h  capture_build_options.py  check_test_data.py  gen_def.py  generate_component_dox.py  generate_doxy.py  generate_doxyfile.py  parse_options.py  parse_sources.py  patch-configure.diff  stdinout_wrapper.py  transform_config.py  transform_config_asm.py  vpx_config.c
subprojects/: .gitignore  nasm-mac.wrap  nasm-win.wrap  perl-win.wrap
subprojects/packagefiles/nasm/: meson.build  patch_nasm.py
subprojects/packagefiles/perl/: meson.build
test/: meson.build
tools/: meson.build  tools.dox.in
vp8/: meson.build
vp9/: meson.build
vpx/: meson.build
vpx_dsp/: meson.build
vpx_dsp/arm/: meson.build
vpx_mem/: meson.build
vpx_ports/: meson.build
vpx_scale/: meson.build
vpx_util/: meson.build
